--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,36 @@
 </head>
 <body>
     <div class="page">
-        <div class="header">
-            <div class="header-title" id="month-description"></div>
-            <div class="header-links">
-                <a href="#" onclick="showNewNote()">Nova agenda</a>
-                <a href="#" onclick="changeMonth(false)"><</a>
-                <a href="#" onclick="changeMonth(true)">></a>
+        <div class="content">
+            <div class="header">
+                <div class="header-title">Meus compromissos</div>
+                <div class="header-links">
+                    <a href="#" onclick="showNewNote()">Nova agenda</a>
+                    <a href="#" onclick="changeMonth(false)"><</a>
+                    <a href="#" onclick="changeMonth(true)">></a>
+                </div>
             </div>
-        </div>
-        <div class="calendar">
-            <input type="hidden" id="month" value="">
-            <input type="hidden" id="year" value="">
-            <table>
-                <thead>
-                    <tr>
-                        <td>Domingo</td>
-                        <td>Segunda</td>
-                        <td>Terça</td>
-                        <td>Quarta</td>
-                        <td>Quinta</td>
-                        <td>Sexta</td>
-                        <td>Sabado</td>
-                    </tr>
-                </thead>
-                <tbody id="calendar-table">
-                </tbody>
-            </table>
-            <div class="list">
-                
+            <div class="calendar">
+                <input type="hidden" id="month" value="">
+                <input type="hidden" id="year" value="">
+                <table>
+                    <thead>
+                        <tr>
+                            <td colspan="7" class="month-description" id="month-description"></td>
+                        </tr>
+                        <tr class="day-description">
+                            <td>Domingo</td>
+                            <td>Segunda</td>
+                            <td>Terça</td>
+                            <td>Quarta</td>
+                            <td>Quinta</td>
+                            <td>Sexta</td>
+                            <td>Sabado</td>
+                        </tr>
+                    </thead>
+                    <tbody id="calendar-table">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -54,13 +56,17 @@
                     <div class="modal-header-close"><a href="#" onclick="hideNewNote()"><i class="fa fa-times"></i></a></div>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <label for="text">Texto</label>
-                        <input type="text" id="text" name="text">
-                        <label for="date">Data</label>
-                        <input type="number" id="date" name="date" maxlength="31" minlength="0">
-                        <button type="submit">Salvar</button>
+                    <form class="form-content">
+                        <div class="form-input">
+                            <label class="form-label" for="text">Texto</label>
+                            <input type="text" id="text" name="text">
+                        </div>
+                        <div class="form-input">
+                            <label class="form-label" for="date">Data</label>
+                            <input type="date" id="date" name="date" maxlength="31" minlength="0">
+                        </div>
                     </form>
+                    <button  class="form-submit" type="submit" onclick="addAgenda()">Salvar</button>
                 </div>
                 <div class="modal-footer">
                     
